# practice

./: .gitignore  README.md
LinkedIn_Learning/OOP_Cpp/p2/: thermostat.h
LinkedIn_Learning/OOP_Cpp/p3/: main
LinkedIn_Learning/p2/: main  main.cpp
LinkedIn_Learning/p3/: bankaccount.h
W3Schools/C/: ex1.c  ex2.c
W3Schools/Cpp/exercises/: ex10_ptr.cpp  ex11_func.cpp  ex12_class.cpp  ex13_class_inheirance.cpp  ex14_class_constructor.cpp  ex15_virtual_func.cpp  ex16_templates.cpp  ex17_files.cpp  ex18_datetime.cpp  ex19_errors.cpp  ex20_vectors.cpp  ex21_list.cpp  ex22_stack.cpp  ex23_queue.cpp  ex24_deque.cpp  ex25_set.cpp  ex26_map.cpp  ex27_iterator.cpp  ex28_algorithm.cpp  ex29_threads_concurrency.cpp  ex2_io_err.cpp  ex30_rand.cpp  ex31_strings.cpp  ex3_enum.cpp  ex4_sstream.cpp  ex5_getline.cpp  ex7_foreach.cpp  ex8_struct.cpp  ex9_struct.cpp
W3Schools/Cpp/projects/: p1.cpp  p2.cpp  p3.cpp
W3Schools/Cpp/projects_utm/wildlandfire_drone_ams_sim/graphgenerator/: main__path_generator.cpp
W3Schools/Java/HelloWorld/src/experiment/: HelloWorld.java
W3Schools/Python/: a1_mediansortedarray.py  a2_substring_cat_words.py  a3_slidingwindowmax.py  a4_findmedianfromdatastream.py  ex1.txt  ex1_fileio.py
W3Schools/Python/concurrency/: ex_async.py  ex_multiprocess.py  ex_thread.py
_tests/c_cpp test/: README.txt  hello.cpp
_tests/java test/: README.txt
_tests/python_lib tests/: geographiclib_test.py
_tests/rust test/: README.txt
_tests/scala test/: README.txt  hello.scala
_tests/scala test/.bsp/: scala.json
_tests/scala test/.scala-build/: ide-envs.json  ide-inputs.json
_tests/scala test/.scala-build/.bloop/: scala test_f9d6225e72-467e20494a.json
_tests/scala test/.scala-build/.bloop/scala test_f9d6225e72-467e20494a/bloop-internal-classes/main-V_PgBH2QQOGPts4IoEw6XA==/: hello$package.tasty  hello.tasty
p1/: main
p2/: thermostat.cpp
udemy/Adv_Modern_Cpp/a1/: assignment  assignment.cpp
udemy/Adv_Modern_Cpp/a2/: main  main.cpp
udemy/Adv_Modern_Cpp/a3/: languages.txt  main  main.cpp
udemy/Adv_Modern_Cpp/ch16/: main  main.cpp
udemy/Adv_Modern_Cpp/ch22/: main  main.cpp
udemy/Adv_Modern_Cpp/ch38/: main  main.cpp
udemy/Adv_Modern_Cpp/ch4/: test  test.cpp
udemy/Adv_Modern_Cpp/ch6/: source  source.cpp
udemy/Adv_Modern_Cpp/e1/: cell.cpp  cell.h  grid.cpp  grid.h  life.h  main  main.cpp
udemy/Graphics_Vulkan_Cpp/HelloWorld/: .clang-format  CMakeLists.txt
udemy/Graphics_Vulkan_Cpp/HelloWorld/src/: main.cpp
udemy/Graphics_Vulkan_Cpp/Windows/: CMakeLists.txt
udemy/Graphics_Vulkan_Cpp/Windows/src/: glfw_initialization.cpp  glfw_initialization.h  glfw_monitor.cpp  glfw_window.cpp  glfw_window.h  graphics.cpp  graphics.h  main.cpp  precomp.h  utilities.cpp  utilities.h
udemy/Masterclass_Java/Pratice/src/: module-info.java
udemy/Masterclass_Java/Pratice/src/experimenting/: BankAccount.java  BankAccountTest.java  HelloWorld.java
